--- a/OPL_OPEN_TIME.qmd
+++ b/OPL_OPEN_TIME.qmd
@@ -16,6 +16,7 @@ if (!require(librarian)){
 librarian::shelf(tidyverse, here, DBI, odbc)
 
 
+date <- Sys.Date()
 
 ```
 
@@ -27,7 +28,7 @@ tryCatch({
                                      Driver = "SnowflakeDSIIDriver",  # Specify the Snowflake ODBC driver
                                      Server = "hawaiianair.west-us-2.azure.snowflakecomputing.com",  # Server address
                                      WAREHOUSE = "DATA_LAKE_READER",  # Specify the Snowflake warehouse
-                                     Database = "ENTERPRISE",  # Specify the database name
+                                     Database = "PLAYGROUND",  # Specify the database name
                                      UID = "jacob.eisaguirre@hawaiianair.com",  # User ID for authentication
                                      authenticator = "externalbrowser")  # Use external browser for authentication
   print("Database Connected!")  # Print success message if connection is established
@@ -41,49 +42,99 @@ dbExecute(db_connection, "USE SCHEMA CREW_ANALYTICS")
 ```
 
 ```{r}
-ot_q <- "select * from CT_OPEN_TIME where PAIRING_DATE > '2024-10-24';"
+fp_q <- paste("select * from AA_FINAL_PAIRING where FLIGHT_DATE >'", date,"';")
 
-raw_ot <- dbGetQuery(db_connection, ot_q)
+raw_fp <- dbGetQuery(db_connection, fp_q)
 
 
 ```
 
 
+## Pilots - CA & FO
 ```{r}
 
 
-clean_ot <- raw_ot %>% 
-  mutate(updated_dt = paste(UPDATE_DATE, UPDATE_TIME, sep = " ")) %>% 
-  mutate(RESERVE_POSITION = ifelse(RESERVE_POSITION %in% c("CA", "FO", "RO", "FA"),
-                                   RESERVE_POSITION, 
-                                   "FA"),
-         BASE = if_else(BASE == "HAL", "HNL", BASE),
-         RESERVE_POSITION = if_else(RESERVE_POSITION == "RO", "FO", RESERVE_POSITION)) %>% 
-  group_by(PAIRING_NO, PAIRING_DATE, RESERVE_POSITION, BASE) %>% 
-  filter(#updated_dt == max(updated_dt),
-         ORIGIN == "M") %>% 
-  ungroup() %>%
-  filter(PAIRING_ASSIGNMENT_CODE == "TSA" & REMOVE_CODE == "TSD") %>% 
-  group_by(PAIRING_DATE, RESERVE_POSITION, BASE) %>% 
-  reframe(n = n())
+ot_pilot_pairings <- raw_fp %>% 
+  filter(!DEPARTING_CITY %in% c("BOS", "AUS", "HND", "KIX", "NRT", "ICN", "FUK", "SYD",
+                              "AKL", "JFK", "CRK"),
+         PAIRING_POSITION %in% c("CA", "FO")) %>% 
+  group_by(FLIGHT_DATE, FLIGHT_NO, DEPARTING_CITY, ARRIVAL_CITY, SCHED_DEPARTURE_TIME, SCHED_ARRIVAL_TIME) %>% 
+  reframe(n = n(),
+          PAIRING_NO = PAIRING_NO,
+          PAIRING_DATE = PAIRING_DATE,
+          EQUIPMENT = EQUIPMENT) %>% 
+  filter(n <= 1) %>% 
+  select(FLIGHT_DATE, FLIGHT_NO, DEPARTING_CITY, ARRIVAL_CITY, SCHED_DEPARTURE_TIME, SCHED_ARRIVAL_TIME, PAIRING_NO, PAIRING_DATE)
+
+p_counts <- raw_fp %>% 
+  filter(PAIRING_POSITION %in% c("CA", "FO")) %>% 
+  select(FLIGHT_DATE, FLIGHT_NO, PAIRING_DATE, PAIRING_NO, PAIRING_POSITION, 
+         EQUIPMENT, DEPARTING_CITY, ARRIVAL_CITY, SCHED_ARRIVAL_TIME, SCHED_DEPARTURE_TIME) %>% 
+  group_by(FLIGHT_DATE, FLIGHT_NO, PAIRING_NO, PAIRING_POSITION, 
+           EQUIPMENT, DEPARTING_CITY, ARRIVAL_CITY, SCHED_ARRIVAL_TIME, SCHED_DEPARTURE_TIME) %>% 
+  distinct() %>% 
+  semi_join(ot_pilot_pairings, by = c("FLIGHT_DATE", "FLIGHT_NO", "PAIRING_NO", "DEPARTING_CITY", "ARRIVAL_CITY")) %>% 
+  mutate(PAIRING_PRESENT = 0) %>%
+  pivot_wider(names_from = PAIRING_POSITION, values_from = PAIRING_PRESENT, values_fill = 1) %>% 
+  mutate(across(c("CA", "FO"), ~ if_else(is.na(.), 1, .))) %>%
+  ungroup() %>% 
+  filter(CA == 1 |
+         FO == 1) %>% 
+  mutate(RO = NA)
+
+
+
+```
+
+## Pilots - RO
+```{r}
+
+ot_ro_pairings <- raw_fp %>% 
+  filter(DEPARTING_CITY %in% c("BOS", "AUS", "HND", "KIX", "NRT", "ICN", "FUK", "SYD",
+                              "AKL", "JFK", "CRK"),
+         PAIRING_POSITION %in% c("CA", "FO", "RO"),
+         !EQUIPMENT == "33Y") %>% 
+  select(FLIGHT_DATE, FLIGHT_NO, DEPARTING_CITY, ARRIVAL_CITY, 
+         SCHED_DEPARTURE_TIME, SCHED_ARRIVAL_TIME, PAIRING_POSITION) %>% 
+  mutate(n = 0) %>%
+  group_by(FLIGHT_DATE, FLIGHT_NO, DEPARTING_CITY, ARRIVAL_CITY, SCHED_DEPARTURE_TIME, SCHED_ARRIVAL_TIME) %>% 
+  complete(
+    PAIRING_POSITION = c("CA", "FO", "RO"), 
+    fill = list(n = 1)
+  ) %>% 
+  distinct() %>% 
+  pivot_wider(names_from = PAIRING_POSITION, values_from = n)
+
   
 
+reframe(n = n(),
+          PAIRING_NO = PAIRING_NO,
+          PAIRING_DATE = PAIRING_DATE,
+          EQUIPMENT = EQUIPMENT) %>% 
+  filter(!EQUIPMENT == "33Y",
+         n <= 2) %>% 
+  distinct() %>% 
+  mutate(RO = 1,
+         CA = 0,
+         FO = 0) %>% 
+  select(!n)
+
+
+
+final_open_p_counts <- rbind(p_counts, ot_ro_pairings)
+
 ```
 
-```{r}
-t <- raw_ot %>% 
-  filter(PAIRING_DATE >= "2024-11-01",
-         RESERVE_POSITION == "CA") %>% 
-  mutate(flag = case_when(PAIRING_NO == "H8800" & PAIRING_DATE == "2024-11-02" ~ 1,
-                          PAIRING_NO == "C2801" & PAIRING_DATE == "2024-11-02" ~ 1,
-                          PAIRING_NO == "I7804A" & PAIRING_DATE == "2024-11-02" ~ 1,
-                          PAIRING_NO == "H1855" & PAIRING_DATE == "2024-11-02" ~ 1,
-                          PAIRING_NO == "H3834" & PAIRING_DATE == "2024-11-02" ~ 1,
-                          PAIRING_NO == "H3077" & PAIRING_DATE == "2024-11-02" ~ 1,
-                          PAIRING_NO == "H3040" & PAIRING_DATE == "2024-11-02" ~ 1)) %>% 
-  filter(flag == 1) %>% 
-  mutate(updated_dt = paste(UPDATE_DATE, UPDATE_TIME, sep = " "))
 
+## FA
+```{r}
+
+ot_fa_pairings <- raw_fp %>% 
+  filter(CREW_INDICATOR == "FA")%>% 
+  group_by(FLIGHT_DATE, FLIGHT_NO, DEPARTING_CITY, ARRIVAL_CITY, SCHED_DEPARTURE_TIME, SCHED_ARRIVAL_TIME) %>% 
+  reframe(n = n(),
+          PAIRING_NO = PAIRING_NO,
+          EQUIPMENT = EQUIPMENT)
 
 ```
 
