--- a/OPL_OPEN_TIME.qmd
+++ b/OPL_OPEN_TIME.qmd
@@ -59,6 +59,15 @@ ot_pilot_pairings <- raw_fp %>%
                               "AKL", "JFK", "CRK"),
          PAIRING_POSITION %in% c("CA", "FO")) %>% 
   group_by(FLIGHT_DATE, FLIGHT_NO, DEPARTING_CITY, ARRIVAL_CITY, SCHED_DEPARTURE_TIME, SCHED_ARRIVAL_TIME) %>% 
+    complete(
+    PAIRING_POSITION = c("CA", "FO"), 
+    fill = list(n = 1)
+  ) %>% 
+  distinct() %>% 
+  pivot_wider(names_from = PAIRING_POSITION, values_from = n)
+  
+  ### OLD
+  
   reframe(n = n(),
           PAIRING_NO = PAIRING_NO,
           PAIRING_DATE = PAIRING_DATE,
@@ -105,7 +114,7 @@ ot_ro_pairings <- raw_fp %>%
   distinct() %>% 
   pivot_wider(names_from = PAIRING_POSITION, values_from = n)
 
-  
+  ### OLD
 
 reframe(n = n(),
           PAIRING_NO = PAIRING_NO,
